# routes/voucherRoutes.js
@@ -6,6 +6,8 @@ const {
   clippedDetails,
   getvoucherByStore,
   getSingleVoucher,
+  deleteVoucher,
+  updateVoucherDetails
 } = require("../controllers/voucher");
 const router = express.Router();
 const { protect } = require("../middleware/auth");
@@ -15,5 +17,7 @@ router.route("/voucher/:id").get(getSingleVoucher);
 router.route("/voucherbystore/:id").get(getvoucherByStore);
 router.route("/voucher/clipped-for-later").post(protect, clippedVoucher);
 router.route("/voucher/clipped-details/:id").get(protect, clippedDetails);
+router.route("/voucher/:id").delete(protect, deleteVoucher)
+router.route("/voucher/:id").patch(protect, updateVoucherDetails);
 
 module.exports = router;
